--- a/Curso em Vídeo/aula_17/css/style.css
+++ b/Curso em Vídeo/aula_17/css/style.css
@@ -22,12 +22,6 @@ div {
     padding: 8px;
 }
 
-img{
-    border-radius: 50%;
-    width: 250;
-    height: 250;
-}
-
 footer {
     text-align: center;
     color: white;
@@ -35,5 +29,5 @@ footer {
 }
 
 label {
-    display: block;
+    display: inline;
 }
